--- a/nussknacker-dist/src/universal/conf/base-application.conf
+++ b/nussknacker-dist/src/universal/conf/base-application.conf
@@ -62,6 +62,8 @@ authentication: {
   redirectUri: ${?OAUTH2_REDIRECT_URI}
   accessTokenUri: ${?OAUTH2_ACCESS_TOKEN_URI}
   profileUri: ${?OAUTH2_PROFILE_URI}
+  publicKeyFile: ${?OAUTH2_PUBLIC_KEY_FILE}
+  validateNonce: ${?OAUTH2_VALIDATE_NONCE}
   accessTokenParams: {
     grant_type: ${?OAUTH2_GRANT_TYPE}
   }
